--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -271,6 +271,8 @@ in the
 field.
 .TP
 .BR SECCOMP_RET_ERRNO
+.\" FIXME What does "the return value" refer to in the next sentence?
+.\"       It is not obvious to me.
 Results in the lower 16-bits of the return value being passed
 to userland as the
 .IR errno
