seccomp.2: srcfix: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -258,6 +258,9 @@ if resuming execution, set it to something sensible.
 .BR ENOSYS
 could overwrite some useful information.)
 
+.\" FIXME The following sentence is the first time that SECCOMP_RET_DATA
+.\"       is mentioned. SECCOMP_RET_DATA needs to be described in this
+.\"       man page.
 The
 .BR SECCOMP_RET_DATA
 portion of the return value will be passed as
