getrandom.2: Reword GRND_NONBLOCK description
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/getrandom.2
+++ b/man2/getrandom.2
@@ -96,17 +96,17 @@ in the
 argument.
 .TP
 .B GRND_NONBLOCK
-If this bit is set and there is no random byte available at all,
+By default, if there is no random byte available at all,
 .BR getrandom ()
-will return -1 with
+blocks until data is available.
+If the
+.B GRND_NONBLOCK
+flag is set, then
+.BR getrandom ()
+instead immediately returns -1 with
 .I errno
 set to
 .BR EAGAIN .
-If the
-.B GRND_NONBLOCK
-bit is not set and there is no random byte available at all,
-.BR getrandom ()
-will block.
 .SH RETURN VALUE
 On success,
 .BR getrandom ()
