getrandom.2: Reword GRND_RANDOM description
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/getrandom.2
+++ b/man2/getrandom.2
@@ -85,9 +85,11 @@ The
 .I /dev/random
 pool is limited based on the entropy that can be obtained from environmental
 noise. 
-If fewer random bytes are available than are requested in
+If the number of available bytes in
+.I /dev/random
+is less than requested in
 .IR buflen ,
-the available random bytes will be copied and the call returns.
+the call returns just the available random bytes.
 If no random byte is available, the response will depend on the
 presence of
 .B GRND_NONBLOCK
