getrandom.2: srcfix: added FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/getrandom.2
+++ b/man2/getrandom.2
@@ -140,6 +140,10 @@ was introduced in version 3.17 of the Linux kernel.
 This system call is Linux-specific.
 .SH NOTES
 .SS Interruption by a signal handler
+.\" FIXME Here, I think there needs to be an opening paragraph that describes
+.\" the cases where getrandom() can block. This should cover the cases with
+.\" GRND_RANDOM and without GRND_RANDOM. Reading the existing page, I am
+.\" still not completely confident that I know what the cases are.
 The reaction of
 .BR getrandom ()
 in case of an interruption of a blocking call by a signal
