--- a/man3/atan2.3
+++ b/man3/atan2.3
@@ -163,6 +163,20 @@ is positive infinity, +pi/4 (\-pi/4) is returned.
 No errors occur.
 .\" POSIX.1 documents an optional underflow error
 .\" glibc 2.8 does not do this.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw28 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR atan2 (),
+.BR atan2f (),
+.BR atan2l ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
