atanh.3: ATTRIBUTES: Note functions that are thread-safe
The function atanh(), atanhf() and atanhl() are thread safe.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/atanh.3
+++ b/man3/atanh.3
@@ -136,6 +136,20 @@ is set to
 A divide-by-zero floating-point exception
 .RB ( FE_DIVBYZERO )
 is raised.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw28 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR atanh (),
+.BR atanhf (),
+.BR atanhl ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
