--- a/man3/fmod.3
+++ b/man3/fmod.3
@@ -143,6 +143,20 @@ An invalid floating-point exception
 is raised.
 .\" POSIX.1 documents an optional underflow error, but AFAICT it doesn't
 .\" (can't?) occur -- mtk, Jul 2008
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR fmod (),
+.BR fmodf (),
+.BR fmodl ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
