--- a/man3/log.3
+++ b/man3/log.3
@@ -125,6 +125,20 @@ is set to
 A divide-by-zero floating-point exception
 .RB ( FE_DIVBYZERO )
 is raised.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR log (),
+.BR logf (),
+.BR logl ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
