--- a/man3/log2.3
+++ b/man3/log2.3
@@ -88,6 +88,20 @@ For a discussion of the errors that can occur for these functions, see
 .BR log (3).
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw24 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR log2 (),
+.BR log2f (),
+.BR log2l ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
