log10.3: ATTRIBUTES: Note functions that are thread-safe
The function log10(), log10f() and log10l() are thread safe.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/log10.3
+++ b/man3/log10.3
@@ -86,6 +86,20 @@ when calling these functions.
 
 For a discussion of the errors that can occur for these functions, see
 .BR log (3).
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw28 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR log10 (),
+.BR log10f (),
+.BR log10l ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 C99, POSIX.1-2001.
 The variant returning
