pow10.3: ATTRIBUTES: Note functions that are thread-safe
The function pow10(), pow10f() and pow10l() are thread safe.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/pow10.3
+++ b/man3/pow10.3
@@ -46,6 +46,20 @@ power
 .IR x .
 .SH VERSIONS
 These functions first appeared in glibc in version 2.1.
+.SH ATTRIBUTES
+For an explanation of the terms used in this section, see
+.BR attributes (7).
+.TS
+allbox;
+lbw28 lb lb
+l l l.
+Interface	Attribute	Value
+T{
+.BR pow10 (),
+.BR pow10f (),
+.BR pow10l ()
+T}	Thread safety	MT-Safe
+.TE
 .SH CONFORMING TO
 This is a GNU extension.
 .SH NOTES
