ecvt.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/ecvt.3
+++ b/man3/ecvt.3
@@ -116,9 +116,11 @@ lb lb lb
 l l l.
 Interface	Attribute	Value
 T{
-.BR ecvt (),
+.BR ecvt ()
+T}	Thread safety	MT-Unsafe race:ecvt
+T{
 .BR fcvt ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:fcvt
 .TE
 .SH CONFORMING TO
 SVr2;
