readdir.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/readdir.3
+++ b/man3/readdir.3
@@ -154,7 +154,7 @@ l l l.
 Interface	Attribute	Value
 T{
 .BR readdir ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:dirstream
 T{
 .BR readdir_r ()
 T}	Thread safety	MT-Safe
