qecvt.3: Modify thread-safety information
As annotation in glibc manual is more detailed, change the
thread-safety information to be same as glibc manual.

Signed-off-by: Ma Shimiao <mashimiao.fnst@cn.fujitsu.com>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man3/qecvt.3
+++ b/man3/qecvt.3
@@ -87,13 +87,15 @@ For an explanation of the terms used in this section, see
 .BR attributes (7).
 .TS
 allbox;
-lbw16 lb lb
+lb lb lb
 l l l.
 Interface	Attribute	Value
 T{
-.BR qecvt (),
+.BR qecvt ()
+T}	Thread safety	MT-Unsafe race:qecvt
+T{
 .BR qfcvt ()
-T}	Thread safety	MT-Unsafe
+T}	Thread safety	MT-Unsafe race:qfcvt
 T{
 .BR qgcvt ()
 T}	Thread safety	MT-Safe
