--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -33,9 +33,9 @@ seccomp \- operate on Secure Computing state of the process
 .B #include <linux/filter.h>
 .B #include <linux/audit.h>
 .B #include <linux/signal.h>
-.\" FIXME Is sys/ptrace.h really required? It is not used in
-.\"       the example program below.
 .B #include <sys/ptrace.h>
+.\" Kees Cook noted: Anything that uses SECCOMP_RET_TRACE returns will
+.\"                  need <sys/ptrace.h>
 
 .BI "int seccomp(unsigned int " operation ", unsigned int " flags \
 ", void *" args );
@@ -45,16 +45,13 @@ The
 .BR seccomp ()
 system call operates on the Secure Computing (seccomp) state of the
 calling process.
-.\" FIXME: This page various uses the terms "process', "thread" and "task".
-.\" Probably only one of these (not "task"!) should be used in all
-.\" cases. I suspect it should be "thread".
 
 Currently, Linux supports the following
 .IR operation
 values:
 .TP
 .BR SECCOMP_SET_MODE_STRICT
-The only system calls that the thread is permitted to make are
+The only system calls that the calling thread is permitted to make are
 .BR read (2),
 .BR write (2),
 .BR _exit (2),
@@ -62,7 +59,7 @@ and
 .BR sigreturn (2).
 Other system calls result in the delivery of a
 .BR SIGKILL
-signal
+signal.
 Strict secure computing mode is useful for number-crunching
 applications that may need to execute untrusted byte code, perhaps
 obtained by reading from a pipe or socket.
@@ -85,38 +82,38 @@ This operation is functionally identical to the call:
 The system calls allowed are defined by a pointer to a Berkeley Packet
 Filter (BPF) passed via
 .IR args .
-This arguMent is a pointer to a
+This argument is a pointer to a
 .IR "struct\ sock_fprog" ;
 it can be designed to filter arbitrary system calls and system call
 arguments.
 If the filter is invalid,
 .BR seccomp ()
 fails, returning
-.BR EACCESS
+.BR EINVAL
 in
 .IR errno .
 
-.\" FIXME I (mtk) reworded the following paragraph substantially.
-.\" Please check it.
 If
 .BR fork (2)
 or
 .BR clone (2)
 is allowed by the filter, any child processes will be constrained to
-the same filters and system calls as the parent.
+the same system call filters as the parent.
 If
 .BR execve (2)
-is allowed by the filter,
-the filters and constraints on permitted system calls are preserved across an
+is allowed,
+the existing filters will be preserved across a call to
 .BR execve (2).
 
-.\" FIXME I (mtk) reworded the following paragraph substantially.
-.\" Please check it.
 In order to use the
 .BR SECCOMP_SET_MODE_FILTER
 operation, either the caller must have the
 .BR CAP_SYS_ADMIN
-capability or the call must be preceded by the call:
+capability, or the thread must already have the
+.I no_new_privs
+bit set.
+If that bit was not already set by an ancestor of this thread,
+the thread must make the following call:
 
     prctl(PR_SET_NO_NEW_PRIVS, 1);
 
@@ -130,7 +127,14 @@ This requirement ensures that an unprivileged process cannot apply
 a malicious filter and then invoke a set-user-ID or
 other privileged program using
 .BR execve (2),
-thus potentially compromising that program
+thus potentially compromising that program.
+(Such a malicious filter might, for example, cause an attempt to use
+.BR setuid (2)
+to set the caller's user IDs to non-zero values to instead
+return 0 without actually making the system call.
+Thus, the program might be tricked into retaining superuser privileges
+in circumstances where it is possible to influence it to do
+dangerous things because it did not actually drop privileges.)
 
 If
 .BR prctl (2)
@@ -138,7 +142,7 @@ or
 .BR seccomp (2)
 is allowed by the attached filter, further filters may be added.
 This will increase evaluation time, but allows for further reduction of
-the attack surface during execution of a process.
+the attack surface during execution of a thread.
 
 The
 .BR SECCOMP_SET_MODE_FILTER
@@ -168,7 +172,7 @@ calls results in different filters from this perspective.)
 If any thread cannot synchronize to the same filter tree,
 the call will not attach the new seccomp filter,
 and will fail, returning the first thread ID found that cannot synchronize.
-Synchronization will fail if another thread is in
+Synchronization will fail if another thread in the same process is in
 .BR SECCOMP_MODE_STRICT
 or if it has attached new seccomp filters to itself,
 diverging from the calling thread's filter tree.
@@ -215,36 +219,29 @@ struct seccomp_data {
 .fi
 .in
 
-.\" FIXME I find the next piece a little hard to understand, so,
-.\"       some questions:
-.\"       * If there are multiple filters, in what order are they executed?
-.\"         (The man page should probably detail the answer to this question.)
-.\"       * If there are multiple filters, are they all always executed?
-.\"         I assume not, but the notion that 
-.\"             "the return value for the evaluation of a given system call
-.\"              will always use the value with the highest precedence"
-.\"         implies that even that if one filter generates (say)
-.\"         SECCOMP_RET_ERRNO, then further filters may still be executed,
-.\"         including one that generates (say) the "higher priority"
-.\"         SECCOMP_RET_KILL condition.
-.\"       Can you clarify the above?
-.\" Andy Lutomirski:
-.\"	All of them are executed.  The precedence rules determine what happens
-.\"	if the filters return different values.
-A seccomp filter returns one of the values listed below.
-If multiple filters exist,
-the return value for the evaluation of a given system call
-will always use the value with the highest precedence.
-(For example,
-.BR SECCOMP_RET_KILL
-will always take precedence.)
+A seccomp filter returns a 32-bit value consisting of two parts:
+the most significant 16 bits
+(corresponding to the mask defined by the constant
+.BR SECCOMP_RET_ACTION )
+contain one of the "action" values listed below;
+the least significant 16-bits (defined by the constant
+.BR SECCOMP_RET_DATA )
+are "data" to be associated with this return value.
 
-In decreasing order order of precedence,
+If multiple filters exist, they are all executed,
+in reverse order of their addition to the filter tree
+(i.e., the most recently installed filter is executed first).
+The return value for the evaluation of a given system call is the first-seen
+.BR SECCOMP_RET_ACTION
+value of highest precedence (along with its accompanying data)
+returned by execution of all of the filters.
+
+In decreasing order of precedence,
 the values that may be returned by a seccomp filter are:
 .TP
 .BR SECCOMP_RET_KILL
-Results in the task exiting immediately without executing the system call.
-The task terminates as though killed by a
+Results in the process exiting immediately without executing the system call.
+The process terminates as though killed by a
 .B SIGSYS
 signal
 .RI ( not
@@ -253,7 +250,10 @@ signal
 .BR SECCOMP_RET_TRAP
 Results in the kernel sending a
 .BR SIGSYS
-signal to the triggering task without executing the system call.
+signal to the triggering process without executing the system call.
+Various fields will be set in the
+.I siginfo_t
+structure associated with signal:
 .IR siginfo\->si_call_addr
 will show the address of the system call instruction, and
 .IR siginfo\->si_syscall
@@ -268,9 +268,6 @@ if resuming execution, set it to something sensible.
 .BR ENOSYS
 could overwrite some useful information.)
 
-.\" FIXME The following sentence is the first time that SECCOMP_RET_DATA
-.\"       is mentioned. SECCOMP_RET_DATA needs to be described in this
-.\"       man page.
 The
 .BR SECCOMP_RET_DATA
 portion of the return value will be passed as
@@ -284,21 +281,16 @@ in the
 field.
 .TP
 .BR SECCOMP_RET_ERRNO
-.\" FIXME What does "the return value" refer to in the next sentence?
-.\"       It is not obvious to me.
-.\"	Andy Lutomirski:
-.\"		The return value is the value returned by the BPF program.
-Results in the lower 16-bits of the return value being passed
-to user space as the
+Results in the
+.B SECCOMP_RET_DATA
+portion of the filter's return value being passed to user space as the
 .IR errno
-without executing the system call.
+value without executing the system call.
 .TP
 .BR SECCOMP_RET_TRACE
 When returned, this value will cause the kernel to attempt to notify a
 .BR ptrace (2)-based
 tracer prior to executing the system call.
-.\" FIXME I (mtk) reworded the following sentence substantially.
-.\" Please check it.
 If there is no tracer present,
 the system call is not executed and returns a failure status with
 .I errno
@@ -313,8 +305,7 @@ The tracer will be notified of a
 .BR PTRACE_EVENT_SECCOMP
 and the
 .BR SECCOMP_RET_DATA
-portion of the BPF program return value will be available to the tracer
-via
+portion of the filter's return value will be available to the tracer via
 .BR PTRACE_GETEVENTMSG .
 
 The tracer can skip the system call by changing the system call number
@@ -335,20 +326,6 @@ ptracers can use this mechanism to escape.)
 .TP
 .BR SECCOMP_RET_ALLOW
 Results in the system call being executed.
-.PP
-If multiple filters exist, the return value for the evaluation of a
-given system call will always use the highest precedent value.
-
-.\" FIXME The following sentence is the first time that SECCOMP_RET_ACTION
-.\"       is mentioned. SECCOMP_RET_ACTION needs to be described in this
-.\"       man page.
-Precedence is determined using only the
-.BR SECCOMP_RET_ACTION
-mask.
-When multiple filters return values of the same precedence,
-only the
-.BR SECCOMP_RET_DATA
-from the most recently installed filter will be returned.
 .SH RETURN VALUE
 On success,
 .BR seccomp ()
@@ -390,7 +367,7 @@ be determined.
 The
 .BR seccomp()
 system call first appeared in Linux 3.17.
-.\" FIXME Add glibc version
+.\" FIXME . Add glibc version
 .SH CONFORMING TO
 The
 .BR seccomp()
@@ -403,8 +380,6 @@ provides a superset of the functionality provided by the
 operation (which does not support
 .IR flags ).
 .SH EXAMPLE
-.\" FIXME Please carefully review the following new piece that
-.\"       demonstrates the use of your example program.
 The program below accepts four or more arguments.
 The first three arguments are a system call number,
 a numeric architecture identifier, and an error number.
@@ -466,6 +441,10 @@ system call, so that the command is not even executed:
 .in +4n
 $ \fBsyscall_nr execve\fP
 59      
+$ \fB./a.out\fP
+Usage: ./a.out <syscall_nr> <arch> <errno> <prog> [<args>]
+Hint for <arch>: AUDIT_ARCH_I386: 0x40000003
+                 AUDIT_ARCH_X86_64: 0xC000003E
 $ \fB./a.out 59 0xC000003E 99 /bin/whoami\fP
 execv: Cannot assign requested address
 .in
@@ -560,11 +539,11 @@ int
 main(int argc, char **argv)
 {
     if (argc < 5) {
-        fprintf(stderr, "Usage:\\n"
-                "refuse <syscall_nr> <arch> <errno> <prog> [<args>]\\n"
-                "Hint:  AUDIT_ARCH_I386: 0x%X\\n"
-                "       AUDIT_ARCH_X86_64: 0x%X\\n"
-                "\\n", AUDIT_ARCH_I386, AUDIT_ARCH_X86_64);
+        fprintf(stderr, "Usage: "
+                "%s <syscall_nr> <arch> <errno> <prog> [<args>]\\n"
+                "Hint for <arch>: AUDIT_ARCH_I386: 0x%X\\n"
+                "                 AUDIT_ARCH_X86_64: 0x%X\\n"
+                "\\n", argv[0], AUDIT_ARCH_I386, AUDIT_ARCH_X86_64);
         exit(EXIT_FAILURE);
     }
 
@@ -589,6 +568,5 @@ main(int argc, char **argv)
 .BR signal (7),
 .BR socket (7)
 .sp
-.\" FIXME: Is the following the best source of info on the BPF language?
 The kernel source file
 .IR Documentation/networking/filter.txt .
