seccomp.2: Clarify thread ID returned on SECCOMP_FILTER_FLAG_TSYNC failure
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -333,7 +333,9 @@ returns 0.
 On error, if
 .BR SECCOMP_FILTER_FLAG_TSYNC
 was used,
-the return value is the thread ID that caused the synchronization failure.
+the return value is the ID of the thread
+that caused the synchronization failure.
+(This ID is a kernel thread ID of 
 On other errors, \-1 is returned, and
 .IR errno
 is set to indicate the cause of the error.
