--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -240,7 +240,8 @@ In decreasing order of precedence,
 the values that may be returned by a seccomp filter are:
 .TP
 .BR SECCOMP_RET_KILL
-Results in the process exiting immediately without executing the system call.
+This value results in the process exiting immediately
+without executing the system call.
 The process terminates as though killed by a
 .B SIGSYS
 signal
@@ -248,7 +249,7 @@ signal
 .BR SIGKILL ).
 .TP
 .BR SECCOMP_RET_TRAP
-Results in the kernel sending a
+This value results in the kernel sending a
 .BR SIGSYS
 signal to the triggering process without executing the system call.
 Various fields will be set in the
@@ -281,7 +282,7 @@ in the
 field.
 .TP
 .BR SECCOMP_RET_ERRNO
-Results in the
+This value results in the
 .B SECCOMP_RET_DATA
 portion of the filter's return value being passed to user space as the
 .IR errno
@@ -325,7 +326,7 @@ sandboxed processes\(emwithout extreme care;
 ptracers can use this mechanism to escape.)
 .TP
 .BR SECCOMP_RET_ALLOW
-Results in the system call being executed.
+This value results in the system call being executed.
 .SH RETURN VALUE
 On success,
 .BR seccomp ()
@@ -335,7 +336,10 @@ On error, if
 was used,
 the return value is the ID of the thread
 that caused the synchronization failure.
-(This ID is a kernel thread ID of 
+(This ID is a kernel thread ID of the type returned by
+.BR clone (2)
+and
+gettid (2).)
 On other errors, \-1 is returned, and
 .IR errno
 is set to indicate the cause of the error.
