seccomp.2: Add a comment to example program
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -186,8 +186,9 @@ points to a filter program:
 .in +4n
 .nf
 struct sock_fprog {
-    unsigned short      len;    /* Number of BPF instructions */
-    struct sock_filter *filter;
+    unsigned short      len;     /* Number of BPF instructions */
+    struct sock_filter *filter;  /* Pointer to array of
+                                    BPF instructions */
 };
 .fi
 .in
