seccomp.2: Add some ERRORS
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -366,6 +366,48 @@ is unknown; or
 .IR flags
 are invalid for the given
 .IR operation
+.\" FIXME Please review the following
+.TP
+.BR EINVAL
+.\" See kernel/seccomp.c::seccomp_may_assign_mode() in 3.18 sources
+A secure computing mode has already been set, and
+.I operation
+differs from the existing setting.
+.\" FIXME Please review the following
+.TP
+.BR EINVAL
+.\" See stub kernel/seccomp.c::seccomp_set_mode_filter() in 3.18 sources
+.I operation
+specified
+.BR SECCOMP_SET_MODE_FILTER ,
+but the kernel was not built with
+.B CONFIG_SECCOMP_FILTER
+enabled.
+.\" FIXME Please review the following
+.TP
+.BR EINVAL
+.I operation
+specified
+.BR SECCOMP_SET_MODE_FILTER ,
+but the filter program pointed to by
+.I args
+was not valid or the length of the filter program was zero or exceeded
+.B BPF_MAXINSNS
+(4096) instructions.
+.BR EINVAL
+.TP
+.BR ENOMEM
+Out of memory.
+.\" FIXME Please review the following
+.TP
+.BR ENOMEM
+.\" ENOMEM in kernel/seccomp.c::seccomp_attach_filter() in 3.18 sources
+The total length of all filter programs attached
+to the calling thread would exceed
+.B MAX_INSNS_PER_PATH
+(32768) instructions.
+Note that for the purposes of calculating this limit,
+each separate filter program incurs an overhead penalty of 4 instructions.
 .TP
 .BR ESRCH
 Another thread caused a failure during thread sync, but its ID could not
