seccomp.2: Minor tweak to ENOMEM error text
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -407,7 +407,8 @@ to the calling thread would exceed
 .B MAX_INSNS_PER_PATH
 (32768) instructions.
 Note that for the purposes of calculating this limit,
-each separate filter program incurs an overhead penalty of 4 instructions.
+each already existing filter program incurs an
+overhead penalty of 4 instructions.
 .TP
 .BR ESRCH
 Another thread caused a failure during thread sync, but its ID could not
