--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -186,9 +186,9 @@ points to a filter program:
 .in +4n
 .nf
 struct sock_fprog {
-    unsigned short      len;     /* Number of BPF instructions */
-    struct sock_filter *filter;  /* Pointer to array of
-                                    BPF instructions */
+    unsigned short      len;    /* Number of BPF instructions */
+    struct sock_filter *filter; /* Pointer to array of
+                                   BPF instructions */
 };
 .fi
 .in
@@ -197,11 +197,11 @@ Each program must contain one or more BPF instructions:
 
 .in +4n
 .nf
-struct sock_filter {    /* Filter block */
-    __u16   code;       /* Actual filter code */
-    __u8    jt;         /* Jump true */
-    __u8    jf;         /* Jump false */
-    __u32   k;          /* Generic multiuse field */
+struct sock_filter {            /* Filter block */
+    __u16 code;                 /* Actual filter code */
+    __u8  jt;                   /* Jump true */
+    __u8  jf;                   /* Jump false */
+    __u32 k;                    /* Generic multiuse field */
 };
 .fi
 .in
@@ -212,10 +212,10 @@ system call information made available via:
 .in +4n
 .nf
 struct seccomp_data {
-    int nr;                     /* system call number */
+    int nr;                     /* System call number */
     __u32 arch;                 /* AUDIT_ARCH_* value */
     __u64 instruction_pointer;  /* CPU instruction pointer */
-    __u64 args[6];              /* up to 6 system call arguments */
+    __u64 args[6];              /* Up to 6 system call arguments */
 };
 .fi
 .in
