seccomp.2: Add reference to sigaction(2) under SECCOMP_RET_TRAP discussion
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -255,12 +255,14 @@ This value results in the kernel sending a
 signal to the triggering process without executing the system call.
 Various fields will be set in the
 .I siginfo_t
-structure associated with signal:
-.IR siginfo\->si_call_addr
+structure (see
+.BR sigaction (2))
+associated with signal:
+.IR si_call_addr
 will show the address of the system call instruction, and
-.IR siginfo\->si_syscall
+.IR si_syscall
 and
-.IR siginfo\->si_arch
+.IR si_arch
 will indicate which system call was attempted.
 The program counter will be as though the system call happened
 (i.e., it will not point to the system call instruction).
