seccomp.2: srcfix: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -279,6 +279,8 @@ portion of the return value will be passed as
 
 .BR SIGSYS
 triggered by seccomp will have the value
+.\" FIXME Why is the constant thus named? All of the other 'si_code'
+.\"       constants are prefixed 'SI_'. Why the inconsistency?
 .BR SYS_SECCOMP
 in the
 .IR si_code
