--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -258,12 +258,32 @@ Various fields will be set in the
 structure (see
 .BR sigaction (2))
 associated with signal:
+.RS
+.IP * 3
+.I si_signo
+will contain
+.BR SIGSYS .
+.IP *
 .IR si_call_addr
-will show the address of the system call instruction, and
+will show the address of the system call instruction.
+.IP *
 .IR si_syscall
 and
 .IR si_arch
 will indicate which system call was attempted.
+.IP *
+.I si_code
+.\" FIXME Why is the constant thus named? All of the other 'si_code'
+.\"       constants are prefixed 'SI_'. Why the inconsistency?
+will contain
+.BR SYS_SECCOMP .
+.IP *
+.I si_errno
+will contain the
+.BR SECCOMP_RET_DATA
+portion of the filter return value.
+.RE
+.IP
 The program counter will be as though the system call happened
 (i.e., it will not point to the system call instruction).
 The return value register will contain an architecture\-dependent value;
@@ -271,20 +291,6 @@ if resuming execution, set it to something sensible.
 (The architecture dependency is because replacing it with
 .BR ENOSYS
 could overwrite some useful information.)
-
-The
-.BR SECCOMP_RET_DATA
-portion of the return value will be passed as
-.IR si_errno .
-
-.BR SIGSYS
-triggered by seccomp will have the value
-.\" FIXME Why is the constant thus named? All of the other 'si_code'
-.\"       constants are prefixed 'SI_'. Why the inconsistency?
-.BR SYS_SECCOMP
-in the
-.IR si_code
-field.
 .TP
 .BR SECCOMP_RET_ERRNO
 This value results in the
