seccomp.2: Minor tweak to wording of ENOSYS error

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -288,7 +288,11 @@ The program counter will be as though the system call happened
 (i.e., it will not point to the system call instruction).
 The return value register will contain an architecture\-dependent value;
 if resuming execution, set it to something sensible.
-(The architecture dependency is because replacing it with
+.\" FIXME Please check:
+.\"     In an attempt to make the text clearer, I changed
+.\"     "replacing it with" to "setting the return value register to"
+.\"     Okay?
+(The architecture dependency is because setting the return value register to
 .BR ENOSYS
 could overwrite some useful information.)
 .TP
