--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -288,6 +288,10 @@ The program counter will be as though the system call happened
 (i.e., it will not point to the system call instruction).
 The return value register will contain an architecture\-dependent value;
 if resuming execution, set it to something sensible.
+.\" FIXME Regarding the preceding line, can you give an example(s)
+.\"       of "something sensible"? (Depending on the answer, maybe it
+.\"       might be useful to add some text on this point.)
+.\"
 .\" FIXME Please check:
 .\"     In an attempt to make the text clearer, I changed
 .\"     "replacing it with" to "setting the return value register to"
