--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -342,6 +342,10 @@ allow use of
 .BR ptrace (2)\(emeven
 of other
 sandboxed processes\(emwithout extreme care;
+.\" FIXME Below, I think it would be helpful to add some words after
+.\"       "to escape", as in "to escape [what?]" I suppose the wording
+.\"       would be something like "to escape the seccomp sandbox mechanism"
+.\"       but perhaps you have a better wording.
 ptracers can use this mechanism to escape.)
 .TP
 .BR SECCOMP_RET_ALLOW
