--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -362,7 +362,7 @@ that caused the synchronization failure.
 (This ID is a kernel thread ID of the type returned by
 .BR clone (2)
 and
-gettid (2).)
+.BR gettid (2).)
 On other errors, \-1 is returned, and
 .IR errno
 is set to indicate the cause of the error.
