seccomp.2: wfix for EFAULT error
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -380,7 +380,7 @@ before using
 .TP
 .BR EFAULT
 .IR args
-was required to be a valid address.
+was not a valid address.
 .TP
 .BR EINVAL
 .IR operation
