seccomp.2: Mention <linux/audit.h>
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -213,7 +213,8 @@ system call information made available via:
 .nf
 struct seccomp_data {
     int nr;                     /* System call number */
-    __u32 arch;                 /* AUDIT_ARCH_* value */
+    __u32 arch;                 /* AUDIT_ARCH_* value
+                                   (see <linux/audit.h>) */
     __u64 instruction_pointer;  /* CPU instruction pointer */
     __u64 args[6];              /* Up to 6 system call arguments */
 };
