seccomp.2: srcfix: Add FIXME
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -566,6 +566,12 @@ cecilia
 static int
 install_filter(int syscall, int arch, int error)
 {
+.\" FIXME In the BPF program below, you use '+' to build the instructions.
+.\"       However, most other BPF example code I see uses '|'. While I
+.\"       assume it's equivalent (i.e., the bit fields are nonoverlapping),
+.\"       was there a reason to use '+' rather than '|'? (To me, the
+.\"       latter is a little clearer in its intent.)
+.\"
     struct sock_filter filter[] = {
         /* [0] Load architecture */
         BPF_STMT(BPF_LD + BPF_W + BPF_ABS,
