seccomp.2: Add reference to original Usenix BPF paper
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -649,3 +649,9 @@ main(int argc, char **argv)
 .sp
 The kernel source file
 .IR Documentation/networking/filter.txt .
+.sp
+McCanne, S. and Jacobson, V. (1992)
+.IR "The BSD Packet Filter: A New Architecture for User-level Packet Capture" ,
+Proceedings of the USENIX Winter 1993 Conference
+.UR http://www.tcpdump.org/papers/bpf-usenix93.pdf
+.UE
