seccomp.2: SEE ALSO: add Documentation/prctl/seccomp_filter.txt
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -647,8 +647,10 @@ main(int argc, char **argv)
 .BR signal (7),
 .BR socket (7)
 .sp
-The kernel source file
-.IR Documentation/networking/filter.txt .
+The kernel source files
+.IR Documentation/networking/filter.txt
+and
+.IR Documentation/prctl/seccomp_filter.txt .
 .sp
 McCanne, S. and Jacobson, V. (1992)
 .IR "The BSD Packet Filter: A New Architecture for User-level Packet Capture" ,
