seccomp.2: Rework discussion of 'seccomp_data' buffer
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -206,8 +206,11 @@ struct sock_filter {            /* Filter block */
 .fi
 .in
 
-When executing the instructions, the BPF program executes over the
-system call information made available via:
+.\" FIXME I reworded/enhanced the following sentence. Is it okay?
+When executing the instructions, the BPF program operates on the
+system call information made available (i.e., use the
+.BR BPF_ABS
+addressing mode) as a buffer of the following form:
 
 .in +4n
 .nf
