--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -391,7 +391,7 @@ was not a valid address.
 is unknown; or
 .IR flags
 are invalid for the given
-.IR operation
+.IR operation .
 .\" FIXME Please review the following
 .TP
 .BR EINVAL
