seccomp.2: ERRORS: add an EINVAL case
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -395,6 +395,14 @@ are invalid for the given
 .\" FIXME Please review the following
 .TP
 .BR EINVAL
+.I operation
+included
+.BR BPF_ABS ,
+but the specified offset was not aligned to a 32-bit boundary or exceeded
+.IR "sizeof(struct\ seccomp_data)" .
+.\" FIXME Please review the following
+.TP
+.BR EINVAL
 .\" See kernel/seccomp.c::seccomp_may_assign_mode() in 3.18 sources
 A secure computing mode has already been set, and
 .I operation
