--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -177,7 +177,7 @@ Synchronization will fail if another thread in the same process is in
 or if it has attached new seccomp filters to itself,
 diverging from the calling thread's filter tree.
 .RE
-.SH FILTERS
+.SS Filters
 When adding filters via
 .BR SECCOMP_SET_MODE_FILTER ,
 .IR args
