seccomp.2: Rename arguments inside example program
Rename the arguments to install_filter() to improve readability
a little and to remove a little ambiguity. In particular, rename
'arch' to 't_arch' so that it does not get confused with the
seccomp_data field of the same name.

Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -603,7 +603,7 @@ cecilia
 #include <sys/prctl.h>
 
 static int
-install_filter(int syscall, int arch, int error)
+install_filter(int syscall_nr, int t_arch, int error)
 {
 .\" FIXME In the BPF program below, you use '+' to build the instructions.
 .\"       However, most other BPF example code I see uses '|'. While I
@@ -617,7 +617,7 @@ install_filter(int syscall, int arch, int error)
                  (offsetof(struct seccomp_data, arch))),
 
         /* [1] Jump forward 4 instructions on architecture mismatch */
-        BPF_JUMP(BPF_JMP + BPF_JEQ + BPF_K, arch, 0, 4),
+        BPF_JUMP(BPF_JMP + BPF_JEQ + BPF_K, t_arch, 0, 4),
 
         /* [2] Load system call number */
         BPF_STMT(BPF_LD + BPF_W + BPF_ABS,
@@ -625,7 +625,7 @@ install_filter(int syscall, int arch, int error)
 
         /* [3] Jump forward 1 instruction on system call number
                mismatch */
-        BPF_JUMP(BPF_JMP + BPF_JEQ + BPF_K, syscall, 0, 1),
+        BPF_JUMP(BPF_JMP + BPF_JEQ + BPF_K, syscall_nr, 0, 1),
 
         /* [4] Matching architecture and system call: return
                specific errno */
