seccomp.2: Tweak an argument name
Signed-off-by: Michael Kerrisk <mtk.manpages@gmail.com>

--- a/man2/seccomp.2
+++ b/man2/seccomp.2
@@ -603,7 +603,7 @@ cecilia
 #include <sys/prctl.h>
 
 static int
-install_filter(int syscall_nr, int t_arch, int error)
+install_filter(int syscall_nr, int t_arch, int f_errno)
 {
 .\" FIXME In the BPF program below, you use '+' to build the instructions.
 .\"       However, most other BPF example code I see uses '|'. While I
@@ -634,9 +634,9 @@ install_filter(int syscall_nr, int t_arch, int error)
         BPF_JUMP(BPF_JMP + BPF_JEQ + BPF_K, syscall_nr, 0, 1),
 
         /* [4] Matching architecture and system call: don't execute
-	       the system call, and return 'error' in 'errno' */
+	       the system call, and return 'f_errno' in 'errno' */
         BPF_STMT(BPF_RET + BPF_K,
-                 SECCOMP_RET_ERRNO | (error & SECCOMP_RET_DATA)),
+                 SECCOMP_RET_ERRNO | (f_errno & SECCOMP_RET_DATA)),
 
         /* [5] Destination of system call number mismatch: allow other
                system calls */
